# GabrielTofvesson.github.io

./: 404.html  CNAME  Cargo.toml  LICENSE.Apache-2.0  LICENSE.MIT  README.md  app.js  app.wasm  index.html  styles.css
.github/workflows/: pr.yml
res/: code.json  languages.json  profile.md
src/: app.rs  lib.rs  theme.rs  util.rs
src/component/: actionbar.rs  card.rs  fa_icon.rs  image_viewer.rs  mod.rs  overlay.rs  tag.rs
src/page/: contact.rs  gallery.rs  home.rs  mod.rs  projects.rs  socials.rs
static/: 404.html  index.html  styles.css
static/res/: github.json  interests.json
static/style/: image-gallery.css  navbar.css  overlay.css  tag.css
style/: app.css  card.css  overlay-gallery.css  styles.css  theme.css
xtask/: Cargo.toml
xtask/src/: main.rs
